[package]
name = "advent_1"
version = "0.1.0"
authors = ["Joan Anglada <janglada@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
regex = "1"
lazy_static = "1.4.0"
multimap = "0.8.2"
peg = "0.6.3"
grid = "0.2.3"